# rag-deploy

./: .gitignore  CLAUDE.md  Dockerfile  INTEGRATION.md  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yml  workflow.yml
app/: CLAUDE.md  __init__.py  config.py  metrics.py  telemetry.py
app/adapters/: __init__.py  base.py  factory.py  json_fixture.py
app/api/: __init__.py  deps.py  errors.py  main.py  routes.py
app/ingestion/: __init__.py  attachment_analyzer.py  document_analyzer.py  embedding.py  indexer.py  sync.py  vector_store.py
app/llm/: __init__.py
app/pipeline/: __init__.py  ingestion_graph.py  nodes.py  query_graph.py  stubs.py
app/query/: __init__.py  acl.py  citation_display.py  formatter.py  generator.py  history.py  openai_streaming.py  openai_transport.py  rerank.py  rerank_node.py  router.py  routing_transport.py  search.py  search_node.py  titler.py  verifier.py  verifier_evaluator.py
app/schemas/: __init__.py  chunk.py  enums.py  page_object.py  rag_state.py  response.py
app/storage/: __init__.py  chunk_lookup.py  jobs.py  mongo_cache.py  qdrant_client.py  space_doc_type_cache.py
docs/: api-spec.md  architecture.md  atlassian-api.md  chunking-strategy.md  conventions.md  db-schema.md  history-manager-agent.md  rag-pipeline-design.md  sse-frontend-contract.md
docs/adr/: 0001-page-level-acl-source.md  0002-acl-prefix-convention.md  0003-ingestion-rag-shared-contracts.md  README.md
docs/ai/: agent-request-citation-precision.md  current-plan.md  prompt-templates.md  workflow.md  working-log.md
examples/: __init__.py  demo_data_layer.py  demo_search.py
samples/: README.md  confluence_sample_data.json  datadog_docs.json  evaluation_set.json
samples/attachments/: EKS_노드_월간_사용량_통계_2026Q1.xlsx  EKS_운영_상세_매뉴얼_v2.3.docx  모니터링_메트릭_정의서_v1.4.xlsx  신규입사자_온보딩_체크리스트_2026.docx
scripts/: __init__.py  backfill_chunk_ids.py  extract_golden_set.py  format.ps1  format.sh  ingest_samples.py  lint.ps1  lint.sh  preflight.ps1  run_evaluation.py  test.ps1  test.sh  verify.ps1  verify.sh
tests/: __init__.py  test_config.py  test_metrics.py  test_smoke.py
tests/adapters/: __init__.py  test_base.py  test_factory.py  test_json_fixture.py
tests/api/: __init__.py  test_deps.py  test_main.py  test_query_route.py
tests/ingestion/: __init__.py  test_attachment_analyzer.py  test_document_analyzer.py  test_embedding.py  test_indexer.py  test_sync.py  test_vector_store.py
tests/pipeline/: __init__.py  test_ingestion_graph.py  test_nodes.py  test_query_graph.py  test_stubs.py
tests/query/: __init__.py  test_acl.py  test_citation_display.py  test_formatter.py  test_generator.py  test_history.py  test_openai_streaming.py  test_openai_transport.py  test_rerank.py  test_rerank_node.py  test_router.py  test_routing_transport.py  test_search.py  test_search_node.py  test_titler.py  test_verifier.py  test_verifier_evaluator.py
tests/schemas/: __init__.py  test_chunk.py  test_enums.py  test_page_object.py  test_rag_state.py  test_response.py
tests/scripts/: __init__.py  test_backfill_chunk_ids.py  test_extract_golden_set.py  test_ingest_samples.py  (+1 more)
(+36 files in other folders)
